<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Content Description -->
    <string name="img_desc_text_logo">파타타 텍스트 로고</string>
    <string name="img_desc_spot_archive">스팟 저장 버튼</string>
    <string name="img_desc_back_arrow">뒤로가기 버튼</string>
    <string name="img_desc_complaint">신고하기 버튼</string>
    <string name="img_desc_more">더보기 버튼</string>
    <string name="img_desc_cancel">취소 버튼</string>
    <string name="img_desc_search">검색 버튼</string>
    <string name="img_desc_setting">설정 버튼</string>
    <string name="img_desc_location">장소 이미지</string>
    <string name="img_desc_category_recommend_more">카테고리 추천 더보기</string>
    <string name="img_desc_search_no_result">검색 결과 없음</string>

    <string name="label_recommend_spot">작가 추천 스팟</string>
    <string name="label_recommend">작가 추천</string>

    <string name="spot_tag_text">야경명소</string>
    <string name="hint_searchbar">검색어를 입력하세요</string>
    <string name="hint_comment">댓글을 입력하세요</string>

    <string name="select">선택</string>
    <string name="delete">삭제</string>

    <string name="search_no_result_text">"'"%s"'"에 대한\n검색 결과가 없습니다.</string>
    <string name="categories_item_empty_text">카테고리에 해당하는 결과가 없습니다.</string>
    <string name="map_list_no_result_text">해당하는 결과가 없습니다.</string>
    <string name="archive_no_result_text">아직 아카이빙한 스팟이 없어요!</string>
    <string name="go_explore_spots">스팟 둘러보러 가기</string>
</resources>