<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.cmc.design.component.PatataAppBar
            android:id="@+id/setting_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bodyType="title"
            app:appBarBackgroundStyle="white"
            app:layout_constraintTop_toTopOf="parent"/>


        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_circle_gray_30"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/setting_appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_nickname"
            style="@style/subtitle_large"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_spacing"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_change_button"
            tools:text="가나다라마바사"/>

        <!--
        <TextView
            android:id="@+id/tv_change_button"
            style="@style/subtitle_extra_small"
            android:textColor="@color/blue_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toTopOf="@+id/tv_nickname"
            app:layout_constraintStart_toEndOf="@+id/tv_nickname"
            app:layout_constraintBottom_toBottomOf="@+id/tv_nickname"
            app:layout_constraintEnd_toEndOf="parent"/>
-->
        <TextView
            android:id="@+id/tv_email"
            style="@style/caption_medium"
            android:textColor="@color/text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
            app:layout_constraintStart_toStartOf="@+id/tv_nickname"
            app:layout_constraintEnd_toEndOf="@+id/tv_change_button"
            tools:text="abcdefg@naver.com"/>


        <!-- 내가 등록한 스팟 -->
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_my_registered_spots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/blue_10"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">
            <TextView
                android:id="@+id/tv_my_registered_spots_title"
                style="@style/subtitle_extra_small"
                android:textColor="@color/blue_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="내가 등록한 스팟"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/tv_my_registered_spots_count"
                style="@style/subtitle_extra_small"
                android:textColor="@color/blue_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_my_registered_spots"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_registered_spot_no_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray_10"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/layout_my_registered_spots"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:id="@+id/iv_registered_spot_no_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_search_result"
                android:contentDescription="@string/img_desc_search_no_result"/>

            <TextView
                android:id="@+id/tv_registered_spot_no_result"
                style="@style/subtitle_large"
                android:textColor="@color/text_disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/archive_no_result_text"
                android:gravity="center"
                android:layout_marginTop="@dimen/default_spacing"/>

            <LinearLayout
                android:id="@+id/layout_explore_spot_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_profile_complete"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="60dp"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent">
                <TextView
                    style="@style/subtitle_medium"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/go_explore_spots"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>